src/components/Accordion/styles.module.scss
@import 'common/styles';

.Accordion {
}

.AccordionHeading {
  text-align: center;
  @include block();
  // margin-top: calc(-1 * var(--theme--unit--base));
}

.AccordionItems {
  display: block;
  text-align: left;
}

.ItemHeading {
  position: relative;
  font-size: var(--theme--font--size-m);
  padding: var(--theme--unit--base);
  cursor: pointer;

  &::after {
    content: '';
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%) rotate(0deg);
    background: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAzNSAyMCI+CiAgPHBhdGggc3Ryb2tlPSIjRTVFNUU1IiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS13aWR0aD0iMi45MTUiIGQ9Ik0yIDJsMTUuMzA0IDE1LjMwNEwzMi42MDggMiIvPgo8L3N2Zz4=')
      50% 50% no-repeat;
    width: 35px;
    height: 20px;
    background-size: contain;
    margin-right: var(--theme--unit--base);
    transition: transform 500ms ease-in-out;
  }

  &:focus {
    outline: none;
  }

  &:target::after,
  &.active::after {
    transform: translateY(-50%) rotate(-180deg);
  }
}

.ItemContent {
  display: none;
  margin: calc(-0.5 * var(--theme--unit--base)) var(--theme--unit--base)
    var(--theme--unit--base);
  animation-name: showDefinition;
  animation-duration: 350ms;
  animation-timing-function: ease-in-out;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.ItemHeading:target + .ItemContent,
.ItemHeading.active + .ItemContent {
  display: block;
}

.ItemHeading:not(:first-of-type) {
  border-top: 1px solid var(--theme--color--tertiary);
}

@keyframes showDefinition {
  0% {
    opacity: 0;
    transform: scale(0.95);
  }
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

